Added Login for FaceBook
Issue: FaceBook uses ID as key, Google uses email as key.
- 'Login: Required' is removed from app.yaml. To accommodate login for
FaceBook

--- a/www/index.html
+++ b/www/index.html
@@ -259,7 +259,7 @@
 			</ul>
 			<ul class="nav nav-pills pull-right"> <!--class="span4 offset8 signin-align"-->
 				<li class="disabled"><a>Welcome back <b>{{ user_nick }}</b>!</a></li>
-				<li><a href="{{ logout }}">Logout</a></li>
+				<li><a href="/logout">Logout</a></li>
 			</ul>
 		</div>
 	</div>
