--- a/www/boards.html
+++ b/www/boards.html
@@ -37,7 +37,7 @@
 			</ul>
 			<ul class="nav nav-pills pull-right"> <!--class="span4 offset8 signin-align"-->
 				<li class="disabled"><a>Welcome back <b>{{ user.usernick }}</b>!</a></li>
-				<li><a href="{{ logout }}">Logout</a></li>
+				<li><a href="/logout">Logout</a></li>
 			</ul>
 		</div>
 	</div>
