--- a/www/mainpage.html
+++ b/www/mainpage.html
@@ -17,7 +17,7 @@
 	})();
 	function signinCallback(authResult) {
 		if (authResult['status']['signed_in']) {
-			document.location.href = '/board';
+			document.location.href = '/login/Google';
 		};
     }
 	</script>
@@ -35,6 +35,7 @@
 			data-requestvisibleactions="http://schemas.google.com/AddActivity"
 			data-scope="https://www.googleapis.com/auth/plus.login"></span>
 		</p>
+		<a class="btn" href="/login/FaceBook">Login with FaceBook</a>
 	</div>
 
 	<!--BODY-->
