--- a/www/setting.html
+++ b/www/setting.html
@@ -29,7 +29,7 @@
 			</ul>
 			<ul class="nav nav-pills pull-right"> <!--class="span4 offset8 signin-align"-->
 				<li class="disabled"><a>Welcome back <b>{{ user.usernick }}</b>!</a></li>
-				<li><a href="{{ logout }}">Logout</a></li>
+				<li><a href="/logout">Logout</a></li>
 			</ul>
 		</div>
 	</div>
@@ -37,7 +37,11 @@
 	<!--BODY-->
 	<div id = "userProfile" align="center">
 		<table>
-			<tr><td>Email:</td><td>{{ user.email }}</td></tr>
+			{% if user.login_type == "facebook" %}
+			<tr><td>FaceBook ID:</td><td>{{ user.email }}</td></tr>
+			{% else %}
+			<tr><td>Google ID:</td><td>{{ user.email }}</td></tr>
+			{% endif %}
 			<tr><td>Total boards created:</td><td>{{ user_createdTotal }}</td></tr>
 			<tr><td>Total boards followed:</td><td>{{ user_followedTotal }}</td></tr>
 		</table>
