Added localhost login
For testing purposes, so that we can login locally.

--- a/www/mainpage.html
+++ b/www/mainpage.html
@@ -35,7 +35,8 @@
 			data-requestvisibleactions="http://schemas.google.com/AddActivity"
 			data-scope="https://www.googleapis.com/auth/plus.login"></span>
 		</p>
-		<a class="btn" href="/login/FaceBook">Login with FaceBook</a>
+		<p><a class="btn" href="/login/FaceBook">Login with FaceBook</a></p>
+		<p><a class="btn" href="/login">Localhost Login</a></p>
 	</div>
 
 	<!--BODY-->
