--- a/www/mainpage.html
+++ b/www/mainpage.html
@@ -35,7 +35,7 @@
 			data-requestvisibleactions="http://schemas.google.com/AddActivity"
 			data-scope="https://www.googleapis.com/auth/plus.login"></span>
 		</p>
-		<p><a class="btn" href="/login/FaceBook">Login with FaceBook</a></p>
+		<p><a href="/login/FaceBook"><img src="../images/fb_active.png" onmouseover="this.src='../images/fb_over.png'" onmouseout="this.src='../images/fb_active.png'" onmousedown="this.src='../images/fb_pressed.png'"/></a></p>
 		<p><a class="btn" href="/login">Localhost Login</a></p>
 	</div>
 
